--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Springdoc OpenAPI UI -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.15</version>
+		</dependency>
+
 		<!-- TestContainers -->
 		<dependency>
 			<groupId>org.testcontainers</groupId>
