--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,3 +45,11 @@ logging:
     rollingpolicy:
       max-file-size: 10MB
       max-history: 10
+
+springdoc:
+  swagger-ui:
+    config-url: ${SWAGGER_CONFIG_URL:/v3/api-docs/swagger-config}
+    url: ${SWAGGER_URL:/v3/api-docs}
+    disable-swagger-default-url: true
+    operationsSorter: method
+    tagsSorter: alpha
